update server configuration to use environment variable for port and add PORT to .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb://admin:password@127.0.0.1:27017/files?directConnection=true&serverSelectionTimeoutMS=2000&authSource=admin&appName=mongosh+2.4.0
+
+PORT=5000
