--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "axios": "^1.8.1",
     "framer-motion": "^11.3.17",
     "mern-crash-course": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "zustand": "^4.5.6"
