--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/PauliusZabinskas/MERN.FYP#readme",
   "dependencies": {
+    "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@helia/unixfs": "^4.0.2",
     "dotenv": "^16.4.7",
+    "event-target-shim": "^6.0.2",
     "express": "^4.21.2",
     "gridfs-stream": "^1.1.1",
+    "helia": "^5.2.1",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1"
   },
