--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,23 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - mongo-data:/data/db
+
+  ipfs:
+    image: ipfs/kubo:latest
+    container_name: ipfs
+    environment:
+      - IPFS_PATH=/data/ipfs
+      - LIBP2P_FORCE_PNET=1
+    volumes:
+      - ./ipfs:/data/ipfs
+    ports:
+      - '4001:4001'
+      - '4001:4001/udp'
+      - '127.0.0.1:8080:8080'
+      - '127.0.0.1:5001:5001'
+
 volumes:
   mongo-data:
+
+
+
