--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@helia/http": "^2.0.4",
     "@helia/unixfs": "^4.0.2",
     "axios": "^1.8.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "event-target-shim": "^6.0.2",
     "express": "^4.21.2",
