--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@helia/unixfs": "^4.0.2",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "event-target-shim": "^6.0.2",
     "express": "^4.21.2",
