--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb://admin:password@127.0.0.1:27017/files?directConnection=true&serverSelectionTimeoutMS=2000&authSource=admin&appName=mongosh+2.4.0
-
+TOKEN_KEY=your_very_secure_secret_key_replace_this_with_something_random
 PORT=5000
