--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@helia/http": "^2.0.4",
     "@helia/unixfs": "^4.0.2",
     "axios": "^1.8.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
@@ -30,6 +33,7 @@
     "express": "^4.21.2",
     "gridfs-stream": "^1.1.1",
     "helia": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1"
   },
