--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon backend/server.js",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" mocha backend/utests/**/*.test.js --exit"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cron": "^4.1.0",
     "crypto-js": "^4.2.0",
@@ -40,6 +40,12 @@
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "chai": "^5.2.0",
+    "cookie-parser": "^1.4.7",
+    "mocha": "^11.1.0",
+    "nodemon": "^3.1.9",
+    "proxyquire": "^2.1.3",
+    "sinon": "^17.0.1",
+    "supertest": "^7.1.0"
   }
 }
