--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" mocha backend/utests/**/*.test.js --exit"
+    "test": "NODE_OPTIONS=--experimental-vm-modules mocha --require @babel/register backend/utests/**/*.test.js --exit"
   },
   "repository": {
     "type": "git",
@@ -40,12 +40,16 @@
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/register": "^7.25.9",
     "chai": "^5.2.0",
     "cookie-parser": "^1.4.7",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
     "proxyquire": "^2.1.3",
     "sinon": "^17.0.1",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "testdouble": "^3.20.2"
   }
 }
