add coverage configuration; include coverage assets, update Babel and Mocha configurations, and enhance test script for improved code coverage reporting

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,4 +1,8 @@
 {
-    "timeout": 5000,
-    "require": "chai"
-  }
+  "require": "@babel/register",
+  "node-option": [
+    "experimental-vm-modules"
+  ],
+  "recursive": true,
+  "exit": true
+}
