--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
+    "sonar": "sonar-scanner",
+    "coverage": "npx c8 npx mocha --require @babel/register backend/utests/**/*.test.js --exit",
     "test": "NODE_OPTIONS=--experimental-vm-modules mocha --require @babel/register backend/utests/**/*.test.js --exit"
   },
   "repository": {
@@ -43,12 +45,17 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/register": "^7.25.9",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-plugin-istanbul": "^7.0.0",
+    "c8": "^10.1.3",
     "chai": "^5.2.0",
     "cookie-parser": "^1.4.7",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
+    "nyc": "^17.1.0",
     "proxyquire": "^2.1.3",
     "sinon": "^17.0.1",
+    "sonarqube-scanner": "^4.3.0",
     "supertest": "^7.1.0",
     "testdouble": "^3.20.2"
   }
