add SonarQube exclusions for coverage files; update sonar-project.properties to exclude coverage directory from analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=PauliusZabinskas_MERN.FYP
 sonar.organization=your-organization
 sonar.host.url=https://sonarcloud.io
+sonar.exclusions=coverage/**
+
 
 
 # Source and test files
