update SonarQube configuration; change source and test file paths to backend and update sonar token variable

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,12 @@ sonar.exclusions=coverage/**
 
 
 # Source and test files
-sonar.sources=src
-sonar.tests=tests
+sonar.sources=backend
+sonar.tests=backend/utests
 
 # Code coverage configuration
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=coverage/test-report.xml
 
-sonar.login=${env:FYP_sonar}
+
+sonar.token=${env:FYP_sonar}
