add SonarQube scanner dependency and update configuration; include @sonar/scan in package.json and package-lock.json, and modify sonar-project.properties for improved project setup

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,17 +1,20 @@
-sonar.projectKey=PauliusZabinskas_MERN.FYP
-sonar.organization=your-organization
-sonar.host.url=https://sonarcloud.io
-sonar.exclusions=coverage/**
+sonar.projectKey="PauliusZabinskas_MERN.FYP"
+sonar.organization="your-organization"
+sonar.host.url="https://sonarcloud.io"
+sonar.exclusions="./coverage/**/"
 
 
 
 # Source and test files
-sonar.sources=backend
-sonar.tests=backend/utests
+sonar.sources=.
+sonar.tests="./backend/utests/"
 
 # Code coverage configuration
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=coverage/test-report.xml
+sonar.javascript.lcov.reportPaths="./coverage/js/lcov.info"
+sonar.testExecutionReportPaths="./coverage/test-report.xml"
 
 
 sonar.token=${env:FYP_sonar}
+
+
+
