--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/register": "^7.25.9",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "@sonar/scan": "^4.3.0",
     "babel-plugin-istanbul": "^7.0.0",
     "c8": "^10.1.3",
     "chai": "^5.2.0",
