--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,20 +1,20 @@
-sonar.projectKey="PauliusZabinskas_MERN.FYP"
-sonar.organization="your-organization"
-sonar.host.url="https://sonarcloud.io"
-sonar.exclusions="./coverage/**/"
+sonar.projectKey=pauliuszabinskas
+sonar.organization=pauliuszabinskas
+sonar.host.url=https://sonarcloud.io
+sonar.exclusions=coverage/**/*
 
 
 
 # Source and test files
 sonar.sources=.
-sonar.tests="./backend/utests/"
+sonar.exclusions=backend/utests/**/*
 
 # Code coverage configuration
-sonar.javascript.lcov.reportPaths="./coverage/js/lcov.info"
-sonar.testExecutionReportPaths="./coverage/test-report.xml"
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
-sonar.token=${env:FYP_sonar}
+
+sonar.token=b96278b2ae636fc65274598febdceebdc13cc626
 
 
 
