--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
 
-sonar.token=b96278b2ae636fc65274598febdceebdc13cc626
+sonar.token=${FYP_sonar}
 
 
 
