--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "dotenv": "^16.4.7",
     "event-target-shim": "^6.0.2",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "gridfs-stream": "^1.1.1",
     "helia": "^5.2.1",
+    "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
