update sonar exclusions; add backend certificates directory to exclusion list

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=pauliuszabinskas
 sonar.organization=pauliuszabinskas
 sonar.host.url=https://sonarcloud.io
 sonar.exclusions=coverage/**/*
+sonar.exclusions=backend/certificates/*
 
 
 
