update backend configurations; add Zone.Identifier file, modify sonar exclusions, and update disk usage data

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.organization=pauliuszabinskas
 sonar.host.url=https://sonarcloud.io
 sonar.exclusions=coverage/**/*
 sonar.exclusions=backend/certificates/*
+sonar.exclusions=backend/certificates/key.pem
 
 
 
